<resources>
    <string name="app_name">Project_Master</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="age">Age</string>
    <string name="sex">Sex</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="evaluation">Evaluation：</string>
    <string name="snoring">Snoring：</string>
    <string name="sleep_condition">Sleep Condition：</string>
    <string name="bmi">BMI：</string>
</resources>
